finished with survey TODO is add results page

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
 body {
   text-align: center
 }
+
+.submitButton {
+  margin-bottom: 60px;
+  padding-bottom: 60px;
+}
+
+.returnHome, .catsButton, .dogsButton, .catsAndDogsButton {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
